<resources>
    <string name="app_name">Spotistats</string>
    <string name="your_top_stats">Your Top Stats</string>
    <string name="month">Month</string>
    <string name="six_months">6 Months</string>
    <string name="year">Year</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_genres">Top Genres</string>
    <string name="top_artists">Top Artists</string>
    <string name="full_stats">View Full Stats</string>
    <string name="login">Log Into Spotify</string>
    <string name="your_full_stats"> Your Full Stats</string>
</resources>